add elasticsearch-common-analysis as module, remove java 1.10 distribution, policy fixes