@@ -3,8 +3,12 @@
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
 -Dlog4j2.disable.jmx=true
 -Dlog4j.shutdownHookEnabled=false
--Dio.netty.allocator.type=pooled
 -Dio.netty.noUnsafe=true
 -Dio.netty.recycler.maxCapacity=0
 -Dio.netty.noKeySetOptimization=true
 -Djna.nosys=true
+--add-modules=jdk.unsupported
+--add-exports=jdk.unsupported/sun.misc=org.xbib.elasticsearch.lucene
+--add-exports=java.base/jdk.internal.ref=org.xbib.elasticsearch.lucene
+--add-exports=java.base/jdk.internal.misc=org.xbib.elasticsearch.lucene
+--add-exports=java.base/sun.nio.ch=org.xbib.elasticsearch.lucene
